# code-sail

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: EXECUTION_PLAN.md
schemas/: app-types.json
scripts/: generate-types.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude_config.rs  codex_config.rs  config.rs  file_util.rs  history.rs  http.rs  main.rs  storage.rs  tasks.rs  terminal.rs  tools.rs  tray.rs
src-tauri/src/config/: health.rs  mod.rs  models.rs  providers.rs  update.rs
src-tauri/src/storage/: crypto.rs  mod.rs  provider.rs  settings.rs
src/components/: AdvancedSettings.tsx  ConfirmDialog.tsx  ErrorBoundary.tsx  ModelCombobox.tsx  NotificationToast.tsx  ProviderActions.tsx  ProviderRow.tsx
src/contexts/: ActiveToolContext.tsx  AppServicesContext.tsx  HistoryContext.tsx  MessageContext.tsx  ProviderEditorContext.tsx
src/hooks/: useActiveTool.ts  useAppUpdate.ts  useHistorySessions.ts  useModelSelection.ts  useProviderEditor.ts  useProviderHealth.ts  useProviderReorder.ts  useStateWithRef.ts  useThemeDropdown.ts  useThemePreference.ts  useToolStatuses.ts  useTransientMessage.ts
src/lib/: api.ts  format.ts  providerDraft.ts  theme.tsx  types.ts  utils.ts
src/pages/: HistoryPage.tsx  ModelsPage.tsx  OverviewPage.tsx
src/styles/: base.css  responsive.css  theme.css
src/styles/components/: error-boundary.css  notification-toast.css  provider-row.css
src/styles/pages/: history.css  models.css  overview.css
